<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">FieldPlay</string>  
<!-- 	Map  -->
    <string name="FPMap">Field Play Map</string>
    <string name="service_toggle">Start/stop service</string>
    <string name="replay_last">Replay last</string>
<!-- Audio Service  -->
<!-- Augmented Binoculars -->
<!-- Route Loader -->


    <string name="action_settings">Settings</string>



    <string name="details">Get details</string>
    <string name="empty">No Content</string>
    <string name="location_details">Location Details</string>
    <string name="binoculars">Binoculars</string>
    <string name="radar_hide">Hide Radar</string>
    <string name="exit">Exit</string>
    <string name="remove_geofences_intent_success">remove geofence success</string>
	<string name ="remove_geofences_intent_failure">remove geofence failure</string>
	<string name="remove_geofences_id_success">remove geofence id success</string>
	<string name="remove_geofences_id_failure">remove geofence id failure</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="add_geofences_result_success">add geofences result success</string>
    <string name="add_geofences_result_failure">add geofences result failure</string>
    <string name="connection_error_misconfigured">connection misconfigured</string>
    <string name="connection_error_internal">connection error internal</string>
    <string name="connection_error_invalid_account">conneciton error invalid account</string>
    <string name="connection_error_license_check_failed">connection error license check failed</string>
    <string name="connection_error_network">network conneciton error</string>
    <string name="connection_error_needs_resolution">conneciton error needs resolution</string>
    <string name="connection_error_disabled" > connection disabled</string>
    <string name="connection_error_invalid">conneciton invalid</string>
    <string name="connection_error_missing">connection missing</string>
    <string name="connection_error_outdated">connection outdated</string>
    <string name="connection_error_sign_in_required">connection error sign in required</string>
    <string name="connection_error_unknown">conneciton error unknown</string>
    <string name="geofence_transition_error_detail">geofence transition error</string>
    <string name="geofence_transition_notification_title">geofence transition notification title</string>
    <string name="geofence_transition_notification_text">geofence transition notification text</string>
    <string name="geofence_transition_invalid_type">geofence transition invalid type</string>
    <string name="geofence_transition_entered">geofence transition entered</string>
    <string name="geofence_transition_exited">geofence transition exited</string>
    <string name="geofence_transition_unknown">geofence transition unknown</string>
    <string name="view_videos">View Videos</string>
    <string name="view_photos">View Photos</string>
    <string name="start">Start</string>
    <string name="no_route_selected">No Route Selected</string>
    <string name="layers">Layers</string>
    <string name="add_route">Add Route</string>
    <string name="fp_store">FieldPlay Store</string>
    <string name="qr_code">QR Code</string>
    <string name="search_downloads">Downloads Folder</string>
    <string name="url_download">Enter URL</string>
    <string name="audio_ticker">Field Play Audio Service</string>
    <string name="delete_route">Delete Route</string>
    <string name="mute_audio">Mute Audio</string>
    <string name="click_to_mute">Click To Mute</string>
    <string name="click_to_unmute">Click To Unmute</string>
    <string name="audio_service_on">Audio Service ON</string>
    <string name="audio_service_off">Audio Service OFF</string>
	<string name="pause_play_button">Play</string>
	<string name="route_archive_suffix">.fpr</string>
	<string name="download_folder_viewer">Download Folder Browser</string>
	<string name="route_details">Route Details</string>
	
</resources>
